--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,15 +1,13 @@
 <div class="container">
   <div class="antialiased text-gray-900 tracking-tight bg-no-repeat bg-cover"
-    style="background-image: url('assets/img/home-bg.png');">
+    style="background-image: url('assets/img/home-bg.jpg');">
     <div class="flex flex-col overflow-hidden">
       <section class="relative">
         <div class="max-w-6xl mx-auto px-4 sm:px-6">
           <div class="pt-24 pb-10 md:pt-18 md:pb-8">
             <div class="text-center pb-12 md:pb-16">
               <h1 class="text-5xl md:text-6xl font-extrabold leading-tight tracking-tighter mb-4">Sàn đấu giá trực
-                tuyến
-                <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-gray-400">cho Người
-                  Việt</span>
+                tuyến cho Người Việt
               </h1>
               <div class="max-w-3xl mx-auto">
                 <p class="text-xl text-gray-600 mb-8">
