--- a/src/app/modules/home/pages/find-products/find-products.component.html
+++ b/src/app/modules/home/pages/find-products/find-products.component.html
@@ -4,7 +4,7 @@
       <div class="md:shadow-border mx-auto rounded overflow-hidden">
         <div class="p-0 md:p-8">
           <h2 class="mb-8 text-center text-4xl font-medium uppercase">Danh sách sản phẩm</h2>
-          <form [formGroup]="findProductsForm" (ngSubmit)="onFindProductsSubmit()" formAutofocus>
+          <form [formGroup]="findProductsForm" (ngSubmit)="onFindProductsSubmit()">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
               <mat-form-field appearance="outline" class="w-full col-span-1 sm:col-span-2">
                 <mat-label>Từ khóa</mat-label>
