--- a/src/app/shared/components/product-list/product-list.component.html
+++ b/src/app/shared/components/product-list/product-list.component.html
@@ -41,7 +41,7 @@
                 </p>
               </div>
               <p class="leading-5">
-                Tổng Lượt ra giá: <strong>{{ product.bidCount }}</strong>
+                Tổng lượt ra giá: <strong>{{ product.bidCount }}</strong>
               </p>
               <p class="leading-5">
                 Đã đăng: <strong>{{ product.createdAt | relativeTime:'259200000' }}</strong>
