--- a/src/app/shared/dialogs/update-email/update-email.component.html
+++ b/src/app/shared/dialogs/update-email/update-email.component.html
@@ -8,7 +8,7 @@
         Địa chỉ email là <strong>bắt buộc</strong>
       </mat-error>
       <ng-template #isEmail>
-        <mat-error *ngIf="updateEmailForm.controls.name.errors?.email">
+        <mat-error *ngIf="updateEmailForm.controls.email.errors?.email">
           Địa chỉ email <strong>phải hợp lệ</strong>
         </mat-error>
       </ng-template>
