--- a/src/app/shared/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/shared/layouts/admin-layout/admin-layout.component.html
@@ -17,6 +17,10 @@
           <mat-icon mat-list-icon>shopping_basket</mat-icon>
           <div mat-line>Sản phẩm</div>
         </a>
+        <a mat-list-item routerLink="/admin/profiles">
+          <mat-icon mat-list-icon>person</mat-icon>
+          <div mat-line>Thông tin cá nhân</div>
+        </a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
