--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -30,7 +30,7 @@
         </ng-container>
         <ng-container matColumnDef="birthdate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày sinh</th>
-          <td mat-cell *matCellDef="let element">{{ (element.birthdate | date:'dd/MM/yyyy') || '' }}</td>
+          <td mat-cell *matCellDef="let element">{{ (element.birthdate | date:'dd/MM/yyyy') || 'Không có' }}</td>
         </ng-container>
         <ng-container matColumnDef="role">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Vai trò</th>
