Fix automatic refresh token in sign in

--- a/src/app/modules/admin/dialogs/update-user/update-user.component.html
+++ b/src/app/modules/admin/dialogs/update-user/update-user.component.html
@@ -57,7 +57,7 @@
         </mat-error>
       </ng-template>
     </mat-form-field>
-    <mat-slide-toggle formControlName="banned">Cấm tài khoản</mat-slide-toggle>
+    <mat-slide-toggle formControlName="banned">Khóa tài khoản</mat-slide-toggle>
   </form>
 </ng-template>
 <ng-template #userNotLoaded>
